# drdestructo2

./: CMakeLists.txt  CPackOptions.cmake  LICENSE  README.md  allegro_joystick_guid.patch
data/: dd2_icon.icns
data/Levels/: level0.xml  level1.xml  level10.xml  level11.xml  level12.xml  level13.xml  level14.xml  level15.xml  level16.xml  level17.xml  level18.xml  level19.xml  level2.xml  level20.xml  level21.xml  level3.xml  level4.xml  level5.xml  level6.xml  level7.xml  level8.xml  level9.xml  levels_list.xml
data/Music/: Game Music - Brief.it  Game Music - Win.it  Game music 1.it  Game music 2.it  music.xml
data/Protos/: ai.lua  controls.xml  gm.xml  graphics.xml  physics.xml  protos.xml  sounds.xml  vars.xml
data/Texts/: level01_1.txt  level01_2.txt  level01_3.txt  level01_pbp1.txt  level01_pbp2.txt  level01_pbp3.txt  level02_1.txt  level02_2.txt  level02_3.txt  level02_4.txt  level02_5.txt  level02_pbp1.txt  level02_pbp2.txt  level02_pbp3.txt  level03_1.txt  level03_2.txt  level03_3.txt  level03_4.txt  level03_5.txt  level03_pbp1.txt  level03_pbp2.txt  level03_pbp3.txt  level04_1.txt  level04_2.txt  level04_3.txt  level04_4.txt  level04_5.txt  level04_pbp1.txt  level04_pbp2.txt  level04_pbp3.txt  level05_1.txt  level05_2.txt  level05_3.txt  level05_4.txt  level05_5.txt  level05_pbp1.txt  level05_pbp2.txt  level05_pbp3.txt  level06_1.txt  level06_2.txt  (+108 more)
docs/: LICENSE-ART.txt  LICENSE-CODE.txt  ReadMe.txt  ReadMe_Source.txt
libs/src/lua/: CMakeLists.txt
libs/src/lua/src/: llex.c
libs/src/luabind/: CMakeLists.txt
libs/src/tinyxml/: CMakeLists.txt
libs/win32/breakpad/client/linux/handler/: exception_handler.cc
libs/win32/breakpad/client/windows/crash_generation/: crash_generation_client.vcxproj  crash_generation_server.vcxproj
libs/win32/breakpad/client/windows/handler/: exception_handler.vcxproj
libs/win32/breakpad/client/windows/sender/: crash_report_sender.vcxproj
libs/win32/breakpad/common/mac/: HTTPMultipartUpload.m
libs/win32/breakpad/google_breakpad/processor/: minidump.h  minidump_processor.h  process_state.h
src/: AICommands.cpp  AICommands.h  AIProcessor.cpp  AIProcessor.h  AIProtoManager.cpp  AIProtoManager.h  AchMenu.cpp  AchMenu.h  Achievements.cpp  Achievements.h  BaseAICommand.h  BaseComponent.h  BaseGameState.h  BaseMenu.cpp  BaseMenu.h  BitArray2D.h  CollisionData.h  Common.h  ComponentContainer.h  ComponentID.h  ControlComponent.h  ControlsProtoManager.cpp  ControlsProtoManager.h  Game.cpp  Game.h  GameContext.h  GameObject.h  GameStateGameOverLives.cpp  GameStateGameOverLives.h  GameStateGameOverTime.cpp  GameStateGameOverTime.h  GameStateIntro.cpp  GameStateIntro.h  GameStateLevel.cpp  GameStateLevel.h  GameStateMenu.cpp  GameStateMenu.h  GameStateNextLevel.cpp  GameStateNextLevel.h  GameStatePause.cpp  (+70 more)
src/Engine/: AllegroImage5.cpp  AllegroImage5.h  AllegroInput5.cpp  AllegroInput5.h  AllegroRender5.cpp  AllegroRender5.h  AllegroSound5.cpp  AllegroSound5.h  AllegroSystem5.cpp  AllegroSystem5.h  AllegroUTFString.h  BitmapManager.cpp  BitmapManager.h  IImage.h  IImageManager.h  IInput.h  ILogger.h  IRender.h  ISound.h  ISystem.h  IUTFString.h  JoystickMapping.cpp  JoystickMapping.h  LogCommon.cpp  LogCommon.h  Logger.cpp  Logger.h  ResourceHandle.h  ResourceManager.h
src/luabind/: config.hpp
src/luabind/detail/: object_rep.hpp
src/win_specific/: DrDestructo2.rc  resource.h
